:ambulance: Remove will-change: transform; to fix new bug in chrome
The bug makes the half of the tapp invisible

--- a/src/scss/_objects/_components/accordion.scss
+++ b/src/scss/_objects/_components/accordion.scss
@@ -63,7 +63,6 @@
     justify-content: center;
     position: relative;
     transition: transform 250ms ease-in-out;
-    will-change: transform;
     i {
       position: absolute;
       top: 0;
